client/src/components/ChatMiddle/ChatMiddle.scss
.chat-middle {
  width: 30%;
  min-width: 380px;
  background: whitesmoke;

  .search-container {
    position: relative;
    height: 50px;
    width: calc(100% - 40px);
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 20px;
    display: flex;
    margin-bottom: 30px;
    align-items: center;
    background: white;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
    border-radius: var(--border-radius-big);

    input {
      height: 100%;
      width: 100%;
      padding: 10px 60px 10px 20px;
      font-size: 1rem;
      border-radius: var(--border-radius-big);
      background: unset;
      // background: linear-gradient(
      //   to right bottom,
      //   rgba(255, 255, 255, 0.9),
      //   rgba(255, 255, 255, 0.1)
      // );
      outline: none;
      border: none;
      color: black;
    }

    .i {
      font-size: 1.5rem;
      position: absolute;
      right: 20px;
      cursor: pointer;
    }
  }

  .people-container {
    width: calc(100% - 30px);
    height: calc(100% - 130px);
    overflow-y: auto;
    margin-left: 20px;

    .person-wrapper {
      padding-right: 10px;

      .person {
        cursor: pointer;
        width: 100%;
        height: 70px;
        border-radius: 50px;
        box-shadow: var(--box-shadow);
        background: white;
        display: flex;
        align-items: center;
        padding: 10px;
        // background: linear-gradient(
        //   to right bottom,
        //   rgba(255, 255, 255, 1),
        //   rgba(255, 255, 255, 0.1)
        // );
        margin-bottom: 20px;

        &:hover {
          background: rgb(254, 249, 249);
        }

        .person-img {
          width: 50px;
          height: 50px;
          margin-right: 15px;

          img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            border-radius: 50%;
          }
        }

        .person-mid {
          .person-name {
            font-weight: 600;
            font-size: 17px;
          }
          .last-chat {
            font-size: 15px;
            margin-top: 5px;
          }
        }

        .last-chat-time {
          margin-left: auto;
          margin-right: 10px;
          color: gray;
          transform: translateY(-10px);
        }
      }
    }
    &::-webkit-scrollbar {
      width: 5px;
    }

    &::-webkit-scrollbar-thumb {
      background: rgb(124, 185, 197);
      border-radius: 50px;
    }

    &::-webkit-scrollbar-track {
      background: rgb(233, 231, 231);
      border-radius: 50px;
    }
  }
}

